--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Task2</string>
+    <string name="app_name">Your orders</string>
+    <string name="active_orders_tab_name_string">Active orders</string>
+    <string name="archive_orders_tab_name_string">Archive</string>
 </resources>
